# MLND-Capstone

./: README.md  proposal.md  pyproject.toml
code/data_prep/: cve.ipynb  encode.ipynb  metasploit.ipynb
code/data_prep/.ipynb_checkpoints/: cve-checkpoint.ipynb
code/model/: adaboost.ipynb  decisiontree.ipynb  regression.ipynb  svm.ipynb
data/raw/: .gitignore
docs/: proposal.md  report.md
