[tool.poetry]
name = "vulnerability-prediction"
version = "0.1.0"
description = "CVE Vulnerability Prediction"
authors = ["Ken Farr <ken@farr.ai>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^0.25.3"
matplotlib = "^3.1.2"
scipy = "^1.4.1"
sklearn = "^0.0"
seaborn = "^0.9.0"
pydotplus = "^2.0.2"

[tool.poetry.dev-dependencies]
jupyterlab = "^1.2.4"
flake8 = "^3.7.9"
black = "^19.10b0"
mypy = "^0.761"
ipython = "^7.11.1"
jsonschema = "^3.2.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
